# Loan-Onboarding-Agent

./: .gitignore  Dockerfile  VOICE_AGENT_RECOMMENDATIONS.md  agent.py  fly.toml  local.db  pyproject.toml
agent/: README.md  service.py
api/: __init__.py  alembic.ini  db.py  llm_review.py  local.db  main.py  models.py  pyproject.toml  requirements.txt  settings.py
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 20260128_2300_create_customer_profiles.py  20260130_2355_create_applications.py  20260131_0100_unique_customer_id.py  20260131_0115_customer_id_primary_key.py  20260201_0100_voice_agent_review_data.py
api/routers/: __init__.py  agent.py  applications.py  customer.py  livekit.py  rfi.py
api/scripts/: start.sh
api/tests/: test_agent_policy.py  test_llm_review.py  test_rfi_api.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/c/[token]/: page.tsx
web/src/app/call/[id]/: page.tsx
web/src/app/customerquerytracker/: page.tsx
web/src/app/marketing/: page.tsx
web/src/app/rfi/[id]/: page.tsx
web/src/app/riskdashboard/: page.tsx
web/src/components/: SiteHeader.tsx
web/src/lib/: api.ts  types.ts
