[project]
name = "support-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[bey,openai]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.0",
    "psycopg[binary]>=3.2.3",
]
